2003-04-18  Sam Steingold  <sds@gnu.org>

	* reploop.lisp (make-xterm-io-stream) [UNIX]: new function
	* clos.lisp (need-gf-already-called-warning-p): new function
	(warn-if-gf-already-called): use it
	(std-remove-method): use it and not warn on removing methods when
	*WARN-IF-GF-ALREADY-CALLED* is NIL

2003-04-17  Sam Steingold  <sds@gnu.org>

	implemented feature request #[ 723360 ]: restart keyword
	commands in debugger
	* reploop.lisp (break-loop): use restart name as the command and
	:Rnum as the abbreviation; re-align help messages

2003-04-06  Sam Steingold  <sds@gnu.org>

	* constobj.d: added hs_simple_nilvector and hs_nilvector
	* predtype.d: added enum_hs_simple_nilvector and enum_hs_nilvector
	(heap_statistics_mapper): count (VECTOR NIL) objects separately

2003-04-06  Sam Steingold  <sds@gnu.org>

	implemented ANSI CLOS class forward definition
	* clos.lisp (defclass): do not require that the parents exist
	(*finalizing-now*): new variable
	(class-finalize): new function
	(ensure-class): consider the class to exist already only if it
	has been finalized
	(finalize-instance-standard-class): move all finalizations here
	(initialize-instance-standard-class): call it
	(print-object): when printing a class object, print its
	finalization status and the number of redefinitions
	(class-finalized-p, finalize-inheritance): new MOP generics
	* constsym.d (CLASS-FINALIZE): added
	* inist.lisp (class-prototype, class-finalized-p)
	(finalize-inheritance): re-export from EXT
	* record.d (do_allocate_instance, %MAKE-INSTANCE): call
	CLASS-FINALIZE when the CLASS-PRECEDENCE-LIST is void

2003-04-05  Sam Steingold  <sds@gnu.org>

	Implemented ANSI CL ENSURE-GENERIC-FUNCTION
	* clos.lisp (ensure-generic-function): new generic function
	(*gf-warn-on-removing-all-methods*): removed
	(do-defgeneric): do not remove the existing methods;
	check signature congruence instead
	(make-instance-standard-class, make-instance-structure-class):