@@ -1,5 +1,11 @@
 2003-04-18  Sam Steingold  <sds@gnu.org>
 
+	* encoding.d (init_encodings_2): unintern CHARSET:WINDOWS-1255 and
+	CHARSET:WINDOWS-1258 when CHARSET:CP1255 and CHARSET:CP1258 are void
+	Reported by Jörg Höhle <Joerg-Cyril.Hoehle@t-systems.com>
+
+2003-04-18  Sam Steingold  <sds@gnu.org>
+
 	* reploop.lisp (make-xterm-io-stream) [UNIX]: new function
 	* clos.lisp (need-gf-already-called-warning-p): new function
 	(warn-if-gf-already-called): use it
@@ -320,7 +326,7 @@
 	* win32.d: undef `unused' around `#include <windows.h>' for MSVC
 	Suggested by Jay Kint <jkint@icosahedron.org>
 
-2003-01-31  Jörg Höhle  <Joerg-Cyril.Hoehle@...>
+2003-01-31  Jörg Höhle  <Joerg-Cyril.Hoehle@t-systems.com>
 
 	patch #[ 678216 ]: FFI:WITH-FOREIGN-STRING
 	* foreign.lisp (with-foreign-string): store string on C stack
